# master_thesis

./: .gitignore  Dockerfile  README.md  cf-manipulation.py  h5_to_ply.py  pt_to_ply.py  requirements.txt  run_concept_fusion.sh
Docker-run-demo/: Dockerfile
build_depth/: CMakeLists.txt  Dockerfile  build_depth.cpp  build_depth.h  run_build_depth.sh  run_cpp.sh
build_vertex_dic/: CMakeLists.txt  Dockerfile  bin_to_png.py  build_vertex_dic.cpp  build_vertex_dic.h  build_vertex_unit_tests.h  debug.txt  read_pt.py  requirements.txt  run_vertex_dic.sh
demo_query/: CMakeLists.txt  Dockerfile  requirements.txt  run_test_feat.sh  test_feat.cpp  test_feat.h  text_to_features.py
extract_features/: Dockerfile  debug.txt  feature_extraction.py  requirements.txt  run_feature_extraction.sh
